--- a/dlg-iclr22/organization.html
+++ b/dlg-iclr22/organization.html
@@ -156,7 +156,8 @@
 							<li>Thomas Kipf, University of Amsterdam, Netherlands</li>
 						</ul> -->
 
-						<h2>Workshop Committees</h2>
+
+						<!-- <h2>Workshop Committees</h2>
 						<ul style="list-style-type:disc;">
 							
 							<li>Ibrahim Abdelaziz (IBM Research AI)</li>
@@ -185,6 +186,23 @@
 							<li>Dawei Zhou (Arizona State University)</li>
 							<li>Zhan Zheng (Washington University in St. Louis)</li>
 							<li>Feng Chen (University at Albany - State University of New York)</li>
+
+
+						<h2>(Not Confirmed)</h2>
+						<ul style="list-style-type:disc;">
+							<li>Soujanya Poria (Singapore University of Technology and Design)</li>
+							<li>Deepanway Ghosal (Singapore University of Technology and Design)</li>
+							<li>Eduard Hovy (Carnegie Mellon University)</li>
+							<li>Yejin Choi (University of Washington)</li>
+							<li>Asli Celikyilmaz (Facebook AI)</li>
+							<li>Philippe Langlais (University of Montreal)</li>
+							<li>Jian-Yun Nie (University of Montreal)</li>
+							<li>Guy Lapalme (University of Montreal)</li>
+							<li>Irina Rish (University of Montreal)</li>
+							<li>Jackie Cheung (McGill University)</li>
+							<li>Hugo Larochelle (Google Brain)</li>
+							<li>Christopher Pal (Polytechnique Montreal)</li>
+						</ul> -->
 
 							<!-- <li>Yuanqi Du, George Mason University</li>
                             <li>Zheng Zhang, Emory University</li>
@@ -250,22 +268,6 @@
 							<li>Feng Chen (University at Albany - State University of New York)</li>
 							<li>Yuanqi Du (George Mason University)</li>
 							<li>Shen Kai (Zhejiang University)</li> -->
-						</ul>
-
-						<h2>(Not Confirmed)</h2>
-						<ul style="list-style-type:disc;">
-							<li>Soujanya Poria (Singapore University of Technology and Design)</li>
-							<li>Deepanway Ghosal (Singapore University of Technology and Design)</li>
-							<li>Eduard Hovy (Carnegie Mellon University)</li>
-							<li>Yejin Choi (University of Washington)</li>
-							<li>Asli Celikyilmaz (Facebook AI)</li>
-							<li>Philippe Langlais (University of Montreal)</li>
-							<li>Jian-Yun Nie (University of Montreal)</li>
-							<li>Guy Lapalme (University of Montreal)</li>
-							<li>Irina Rish (University of Montreal)</li>
-							<li>Jackie Cheung (McGill University)</li>
-							<li>Hugo Larochelle (Google Brain)</li>
-							<li>Christopher Pal (Polytechnique Montreal)</li>
 						</ul>
 
 					</div>
