--- a/dlg-iclr22/cfp.html
+++ b/dlg-iclr22/cfp.html
@@ -63,11 +63,11 @@
 									
 									<h2>Workshop website</h2>
 
-									<a href="https://dlg4nlp-workshop.github.io" target = "_blank"><h3>https://dlg4nlp-workshop.github.io</h3></a>
+									<a href="https://dlg4nlp-workshop.github.io/dlg-iclr22" target = "_blank"><h3>hhttps://dlg4nlp-workshop.github.io/dlg-iclr22</h3></a>
 
 									<h2>Submission link</h2>
 
-									<a href="TBD" target = "_blank"><h3>TBD</h3></a>
+									<a href="https://openreview.net/group?id=ICLR.cc/2022/Workshop/DLG4NLP" target = "_blank"><h3>https://openreview.net/group?id=ICLR.cc/2022/Workshop/DLG4NLP</h3></a>
 
 
 									
