--- a/dlg-iclr22/history.html
+++ b/dlg-iclr22/history.html
@@ -43,7 +43,7 @@
 
 								<article>
 									<header>
-										<h2>PREVIOUS WORKSHOPS</h2>
+										<h2>Related Workshops</h2>
 					
 									</header>
 
