change folder names

--- a/dlg4nlp-iclr22/cfp.html
+++ b/dlg4nlp-iclr22/cfp.html
@@ -63,7 +63,7 @@
 									
 									<h2>Workshop website</h2>
 
-									<a href="https://dlg4nlp-workshop.github.io/dlg-iclr22" target = "_blank"><h3>hhttps://dlg4nlp-workshop.github.io/dlg-iclr22</h3></a>
+									<a href="https://dlg4nlp-workshop.github.io/dlg4nlp-iclr22" target = "_blank"><h3>hhttps://dlg4nlp-workshop.github.io/dlg4nlp-iclr22</h3></a>
 
 									<h2>Submission link</h2>
 
