--- a/dlg4nlp-iclr22/cfp.html
+++ b/dlg4nlp-iclr22/cfp.html
@@ -57,7 +57,7 @@
 										<li>GNN based representation learning on knowledge graphs</li>
 									</ul>
 									
-									<h2>Paper submission (GMT)</h2>
+									<h2>Paper submission</h2>
 
 									<p>We welcome papers ranging between 4 - 8 pages, excluding all references and appendices. All submissions should be formatted in the ICLR 2022 format. <a href="https://github.com/ICLR/Master-Template" target = "_blank">A LaTeX template is available here.</a> Following the ICLR conference submission policy, reviews are double-blind, and author names and affiliations should NOT be listed. Submitted papers will be assessed based on their novelty, technical quality, potential impact, and clarity of writing. For papers that rely heavily on empirical evaluations, the experimental methods and results should be clear, well executed, and repeatable. Authors are strongly encouraged to make data and code publicly available whenever possible. The accepted papers will be posted on the workshop website and will not appear in the ICLR proceedings. </p>
 									
