--- a/dlg4nlp-iclr22/index.html
+++ b/dlg4nlp-iclr22/index.html
@@ -51,6 +51,9 @@
 
 									<p>This workshop aims to bring together both academic researchers and industrial practitioners from different backgrounds and perspectives to the above challenges. This workshop intends to share visions of investigating new approaches and methods at the intersection of graph machine learning and NLP. The workshop will consist of contributed talks, contributed posters, invited talks, and panelists on a wide variety of novel GNN methods and NLP applications.</p>
 
+									<p>Please note that the purpose of this workshop is to bring researchers together to demonstrate and discuss interesting topics of our concern, and the accepted papers will be posted on the workshop website and will not appear in the ICLR proceedings. Presenting papers at this workshop does not affect you to submit your work to other venues.</p>
+
+
 									<h2 id="dates">Important Dates (Time: Anywhere on Earth)</h2>
 <!--									<center>-->
 									<table style="width: 90%">
@@ -70,7 +73,7 @@
 											</tr>
 											<tr>
 												<td><p>Workshop Date</p></td>
-												<td><p>April 25, 2022</p></td>
+												<td><p>April 29, 2022</p></td>
 											</tr>
 									</tbody>
 									</table>
