--- a/dlg4nlp-iclr22/keynote.html
+++ b/dlg4nlp-iclr22/keynote.html
@@ -151,10 +151,10 @@
 								<a href="https://faculty.cc.gatech.edu/~dyang888/" target = "_blank"><b>Diyi Yang</b></a> is an assistant professor in the School of Interactive Computing at Georgia Tech. She is broadly interested in Computational Social Science, and Natural Language Processing. Diyi received her PhD from the Language Technologies Institute at Carnegie Mellon University. Her work has been published at leading NLP/HCI conferences, and also resulted in multiple award nominations from EMNLP, ICWSM, SIGCHI and CSCW. She is named as a Forbes 30 under 30 in Science, a recipient of IEEE AI 10 to Watch, and has received faculty research awards from Amazon, Facebook, JPMorgan Chase, and Salesforce.
                             </div>
                             <div>
-                                <b>Title: </b>TBA.
+                                <b>Title: </b>A Closer Look at Structure and Sparsity in Graph Based Natural Language Understanding
                             </div>
                             <div>
-                                <b>Abstract: </b>TBA.
+                                <b>Abstract: </b>Graph based approaches have been increasingly utilized for different NLP applications, however, what types of structures should be leveraged and to what extent these graph structures help still remain challenging. In this talk, we take a closer look at graph neural networks via two typical NLP applications: structure-aware conversation summarization and knowledge-graph enhanced question answering. Concretely, the first section looks at how to utilize graph structures to better encode discourse relations and actions in conversations for improved dialogue summarization, and the second part  dissects state-of-the-art graph neural network modules and their reasoning capability for question answering.
                                 <hr />
                             </div>
                             
