--- a/dlg4nlp-iclr22/keynote.html
+++ b/dlg4nlp-iclr22/keynote.html
@@ -92,10 +92,12 @@
                                 <a href="http://ivan-titov.org" target = "_blank"><b>Ivan Titov</b></a> is an associate professor in the Institute for Language, Cognition and Computation (ILCC) at the School of Informatics of the University of Edinburgh. He is an action editor for the journal of machine learning research (JMLR), Transactions of ACL (TACL), a member of editorial board of JAIR, an advisory board member for European Chapter of ACL. His other professional services include being a PC co-chair for *SEM 2016 and CoNLL 2018, a senior area chair for ACL 2019 and a program co-chair for ICLR 2021.
                             </div>
                             <div>
-                                <b>Title: </b>TBA.
+                                <b>Title: </b>Improving Interpretability and Generalization with Structured Neural Transduction
                             </div>
                             <div>
-                                <b>Abstract: </b>TBA.
+                                <b>Abstract: </b>Sequence and graph prediction problems can generally be handled with 'unstructured' sequence-to-sequence models, often leading to strong performance, especially in i.i.d. settings. In this talk, instead, I will discuss alternatives that approach the transduction process in a  'structured' way, aiming for improved interpretability and out-of-distribution generalization. In the first part, I will discuss how a text-to-graph generation problem can be tackled by inducing graph decomposition and alignments as part of learning. This method yields a neural graph generator that, at inference time, simply tags the input sequence with graph fragments. We will see how this idea is used to produce an accurate (AMR) and transparent semantic parser.  In the second part, I will discuss how seq-to-seq problems can be handled by a neural model which models the 'translation' process as structured permutation and monotonic translation of the subsequences.  We will see that this structured method leads to improvements in out-of-distribution ("compositional") generalization on semantic parsing and machine translation tasks.
+								<br />
+								Work with Bailin Wang, Chunchuan Lyu, Mirella Lapata, and Shay Cohen.
                                 <hr />
                             </div>
                             
