--- a/dlg4nlp-iclr22/keynote.html
+++ b/dlg4nlp-iclr22/keynote.html
@@ -77,10 +77,10 @@
                                 <a href="https://xpqiu.github.io/en.html" target = "_blank"><b>Xipeng Qiu</b></a> is a professor at the School of Computer Science, Fudan University. He received his B.S. and Ph.D. degrees from Fudan University. His research interests include natural language processing and deep learning. He has published more than 60 top journal/conference papers (e.g., TACL, TKDE, T-ALS, ACL, EMNLP, IJCAI, AAAI, ICCV). He also leads the development of FudanNLP and fastNLP.
                             </div>
                             <div>
-                                <b>Title: </b>TBA.
+                                <b>Title: </b>What Dense Graph Do You Need for Self-Attention?
                             </div>
                             <div>
-                                <b>Abstract: </b>TBA.
+                                <b>Abstract: </b>Transformers have made progress in miscellaneous tasks, but suffer from quadratic computational and memory complexities. Recent works propose sparse Transformers with attention on sparse graphs to reduce complexity and remain strong performance. While effective, the crucial parts of how dense a graph needs to be to perform well are not fully explored. In this talk, we introduce Normalized Information Payload (NIP), a graph scoring function measuring information transfer on graph, which provides an analysis tool for trade-offs between performance and complexity. Guided by this theoretical analysis, we present Hypercube Transformer, a sparse Transformer that models token interactions in a hypercube and shows comparable or even better results with vanilla Transformer while yielding O(NlogN) complexity with sequence length N.
                                 <hr />
                             </div>
                             
