--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -97,11 +97,11 @@
 							<tr>
 								<td>9:15-10:00am</td>
 								<td>
-									<em>Keynote talk 1</em>
+									<em>Keynote talk 1: What Dense Graph Do You Need for Self-Attention?</em>
 									</br>
 									</br>
 									<p>
-										Abstract: TBD
+										Abstract: Transformers have made progress in miscellaneous tasks, but suffer from quadratic computational and memory complexities. Recent works propose sparse Transformers with attention on sparse graphs to reduce complexity and remain strong performance. While effective, the crucial parts of how dense a graph needs to be to perform well are not fully explored. In this talk, we introduce Normalized Information Payload (NIP), a graph scoring function measuring information transfer on graph, which provides an analysis tool for trade-offs between performance and complexity. Guided by this theoretical analysis, we present Hypercube Transformer, a sparse Transformer that models token interactions in a hypercube and shows comparable or even better results with vanilla Transformer while yielding O(NlogN) complexity with sequence length N.
 									</p>
 								</td>
 								<td style="text-align:center;vertical-align:middle"><img src="images/xpqiu.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://xpqiu.github.io/en.html" target = "_blank">Xipeng Qiu, Fudan University</a><br /></td>
@@ -141,7 +141,7 @@
 								<td>
 									<p>Five Contributed Talks (each 15 minutes)</p>
 									
-									<p>Talk 1: KELM: Knowledge Enhanced Pre-Trained Language Representations with Message Passing on Hierarchical Relational Graphs (Average Rating: 8.33)</p>
+									<p>Talk 1: KELM: Knowledge Enhanced Pre-Trained Language Representations with Message Passing on Hierarchical Relational Graphs</p>
 									<p>Yinquan Lu et al.</p>
 	
 									<p>Talk 2: Semantic Representation for Dialogue Modeling</p>
