--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -145,16 +145,16 @@
 									<p>Yinquan Lu et al.</p>
 	
 									<p>Talk 2: Semantic Representation for Dialogue Modeling</p>
-									<p>(invited) Bai Xuefeng</p>
+									<p>Bai Xuefeng</p>
 
 									<p>Talk 3: R5: Rule Discovery with Reinforced and Recurrent Relational Reasoning</p>
-									<p>(invited) Shengyao Lu</p>
+									<p>Shengyao Lu</p>
 
 									<p>Talk 4: GNN-LM: Language Modeling Based on Global Contexts via GNN</p>
 									<p>Yuxian Meng et al.</p>
 
 									<p>Talk 5: Improving Graph-to-Text Generation with Neural Graph Encoders and Pretrained Language Models</p>
-									<p>(invited) Leonardo Ribeiro</p>
+									<p>Leonardo Ribeiro</p>
 									
 									
 								</td>
