--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -87,11 +87,11 @@
 								<td>9:00-9:15am</td>
 								<td>Session: Opening Remarks</td>
 								<td style="text-align:center">
-									<!-- <img src="images/pei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/view/jpei/jian-peis-homepage" target = "_blank">Jian Pei</a>
+									<img src="images/pei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/view/jpei/jian-peis-homepage" target = "_blank">Jian Pei</a>
 									<br />
-									<img src="images/lingfei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/" target = "_blank">Lingfei Wu</a><br /> -->
+									<img src="images/lingfei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/" target = "_blank">Lingfei Wu</a><br />
+									<img src="images/bang.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="http://www-labs.iro.umontreal.ca/~liubang/" target = "_blank">Bang Liu</a>
 								</td>
-
 								
 							</tr>
 							<tr>
@@ -233,7 +233,12 @@
 						<tr>
 							<td>5:45-6:00pm</td>
 							<td>Closing remarks</td>
-							<td></td>
+							<td style="text-align:center">
+								<img src="images/pei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/view/jpei/jian-peis-homepage" target = "_blank">Jian Pei</a>
+								<br />
+								<img src="images/lingfei.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="https://sites.google.com/a/email.wm.edu/teddy-lfwu/" target = "_blank">Lingfei Wu</a><br />
+								<img src="images/bang.jpg" class="img-responsive img-circle" style="width:100px;"><br /><a href="http://www-labs.iro.umontreal.ca/~liubang/" target = "_blank">Bang Liu</a>
+							</td>
 						</tr>
 
 
