--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -222,13 +222,13 @@
 									
 									<p>(11:45-12:00pm) Talk 1: Yinquan Lu et al., <em>KELM: Knowledge Enhanced Pre-Trained Language Representations with Message Passing on Hierarchical Relational Graphs</em> <a href="https://openreview.net/pdf?id=FkG-sX5CE_" target="_blank">[paper]</a> <div class="myline"></div> </p>
 	
-									<p>(12:00-12:15pm) Talk 2: Bai Xuefeng, <em>Semantic Representation for Dialogue Modeling</em> <a href="https://aclanthology.org/2021.acl-long.342/" target="_blank">[paper]</a> <div class="myline"></div> </p>
+									<p>(12:00-12:15pm) Talk 2: Bai Xuefeng, <em>Semantic Representation for Dialogue Modeling</em> <a href="https://aclanthology.org/2021.acl-long.342.pdf" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
 									<p>(12:15-12:30pm) Talk 3: R5: Shengyao Lu, <em>Rule Discovery with Reinforced and Recurrent Relational Reasoning</em> <a href="https://openreview.net/pdf?id=2eXhNpHeW6E" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
 									<p>(12:30-12:45pm) Talk 4: Yuxian Meng et al., <em>GNN-LM: Language Modeling Based on Global Contexts via GNN</em> <a href="https://openreview.net/pdf?id=BS49l-B5Bql" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
-									<p>(12:45-1:00pm) Talk 5: Leonardo Ribeiro, <em>Improving Graph-to-Text Generation with Neural Graph Encoders and Pretrained Language Models</em> </p>
+									<p>(12:45-1:00pm) Talk 5: Leonardo Ribeiro, <em>Improving Graph-to-Text Generation with Neural Graph Encoders and Pretrained Language Models</em> <a href="https://aclanthology.org/2021.emnlp-main.351.pdf" target="_blank">[paper]</a>  </p>
 									
 								</td>
 								<td style="text-align:center"></td>
@@ -322,7 +322,7 @@
 
 									<p>(4:45-5:00pm) Talk 8: Yuchen Zeng et al., <em>Combinatorial Scientific Discovery: Finding New Concept Combinations Beyond Link Prediction</em> <a href="https://openreview.net/references/pdf?id=8gY6yJtqQ" target="_blank">[paper]</a> 	<div class="myline"></div>  </p>
 
-									<p>(5:00-5:15pm) Talk 9: Zhibin Chen et al., <em>Entailment Graph Learning with Textual Entailment and Soft Transitivity</em> <a href="https://openreview.net/references/pdf?id=fXiRAZjoIb" target="_blank">[paper]</a> 	<div class="myline"></div>  </p>
+									<p>(5:00-5:15pm) Talk 9: Zhibin Chen et al., <em>Entailment Graph Learning with Textual Entailment and Soft Transitivity</em> <a href="https://arxiv.org/pdf/2204.03286.pdf" target="_blank">[paper]</a> 	<div class="myline"></div>  </p>
 
 									<p>(5:15-5:30pm) Talk 10: Xin Xie et al., <em>From Discrimination to Generation: Knowledge Graph Completion with Generative Transformer</em> <a href="https://openreview.net/references/pdf?id=HwQvURN1a5" target="_blank">[paper]</a>  	<div class="myline"></div>  </p>
 
