--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -117,7 +117,7 @@
 							<tr>
 								<td>9:15-10:00am</td>
 								<td>
-									<em>Keynote talk 1: What Dense Graph Do You Need for Self-Attention?</em>
+									<em>Keynote talk 1: What Dense Graph Do You Need for Self-Attention?</em> <a href="slides/WhatDenseGraphDoYouNeed.pdf" target="_blank">[slides]</a>
 									</br>
 									</br>
 									<p>
@@ -261,7 +261,7 @@
 							<tr>
 								<td>2:45-3:30pm</td>
 								<td>
-									<em>Keynote talk 4: Geometric Scattering: Graph Neural Nets that Preserve High-Frequency Information.</em>
+									<em>Keynote talk 4: Geometric Scattering: Graph Neural Nets that Preserve High-Frequency Information.</em> <a href="slides/DLG4NLP_Perlmutter.pdf" target="_blank">[slides]</a>
 									</br>
 									</br>
 									<p>
