--- a/dlg4nlp-iclr22/organization.html
+++ b/dlg4nlp-iclr22/organization.html
@@ -157,52 +157,21 @@
 						</ul> -->
 
 
-						<!-- <h2>Workshop Committees</h2>
+						<h2>Technical Program Committees</h2>
 						<ul style="list-style-type:disc;">
 							
-							<li>Ibrahim Abdelaziz (IBM Research AI)</li>
-							<li>Wei Cui  </li>
-							<li>Sutanay Choudhury (Pacific Northwest National Lab)</li>
-							<li>Lingyang Chu (Simon Fraser University)</li>
-							<li>Tyler Derr (Michigan State University)</li>
-							<li>Stephan Günnemann (Technical University of Munich)</li>
-							<li>Balaji Ganesan (IBM Research AI)</li>
-							<li>William L. Hamilton (McGill University)</li>
-							<li>Tengfei Ma (IBM Research AI)</li>
-							<li>Tian Gao (IBM Research AI)</li>
-							<li>Thomas Kipf (University of Amsterdam)</li>
-							<li>Renjie Liao (University of Toronto)</li>
-							<li>Yujia Li (DeepMind)</li>
-							<li>Shen Wang  </li>
-							<li>Liana Ling (IBM Research AI)</li>
-							<li>Yizhou Sun (University of California, Los Angeles)</li>
-							<li>Hanghang Tong (Arizona State University)</li>
-							<li>Richard Tong (Squirrel AI Learning)</li>
-							<li>Jian Tang (Mila)</li>
-							<li>Lingfei Wu (JD.Com Silicon Valley Research Center)</li>
-							<li>Qing Wang, (IBM Research AI)</li>
-							<li>Yinglong Xia (Facebook AI)</li>
-							<li>Liang Zhao (Emory University)</li>
-							<li>Dawei Zhou (Arizona State University)</li>
-							<li>Zhan Zheng (Washington University in St. Louis)</li>
-							<li>Feng Chen (University at Albany - State University of New York)</li>
+							<li>Qingkai Zeng (University of Notre Dame)</li>
+							<li>Tengfei Ma (IBM)</li>
+							<li>Xiaojie Guo (George Mason University)</li>
+							<li>Yile Wang (Westlake University)</li>
+							<li>Yu Chen (Meta AI)</li>
+							<li>Yulong Chen (Zhejiang University)</li>
+							<li>Zhong Zhang (University of Electronic Science and Technology of China)</li>
+							<li>Suyuchen Wang (University of Montreal)</li>
+							<li>Qianggang Ding (University of Montreal)</li>
+							<li>Haochen Shi (University of Montreal)</li>
+							<li>Sifan Wu (University of Montreal)</li>
 
-
-						<h2>(Not Confirmed)</h2>
-						<ul style="list-style-type:disc;">
-							<li>Soujanya Poria (Singapore University of Technology and Design)</li>
-							<li>Deepanway Ghosal (Singapore University of Technology and Design)</li>
-							<li>Eduard Hovy (Carnegie Mellon University)</li>
-							<li>Yejin Choi (University of Washington)</li>
-							<li>Asli Celikyilmaz (Facebook AI)</li>
-							<li>Philippe Langlais (University of Montreal)</li>
-							<li>Jian-Yun Nie (University of Montreal)</li>
-							<li>Guy Lapalme (University of Montreal)</li>
-							<li>Irina Rish (University of Montreal)</li>
-							<li>Jackie Cheung (McGill University)</li>
-							<li>Hugo Larochelle (Google Brain)</li>
-							<li>Christopher Pal (Polytechnique Montreal)</li>
-						</ul> -->
 
 							<!-- <li>Yuanqi Du, George Mason University</li>
                             <li>Zheng Zhang, Emory University</li>
