--- a/dlg4nlp-naacl22/history.html
+++ b/dlg4nlp-naacl22/history.html
@@ -45,13 +45,14 @@
 							<!-- Content -->
 
 								<article>
-									<header>
-										<h2>Related Workshops</h2>
-					
-									</header>
 
+									<h2>Previous Workshop</h2>
 									<ul style="list-style-type:disc;">
 										<li><a href="https://dlg4nlp-workshop.github.io/dlg4nlp-iclr22/" target = "_blank"><h3>The Seventh International Workshop on Deep Learning on Graphs for Natural Language Processing (DLG4NLP'22) (co-located with ICLR'22)</h3></a></li>
+									</ul>
+
+									<h2>Related Workshops</h2>
+									<ul style="list-style-type:disc;">
 										<li><a href="https://deep-learning-graphs.bitbucket.io/dlg-kdd21/" target = "_blank"><h3>The Sixth International Workshop on Deep Learning on Graphs (DLG-KDD'21) (co-located with KDD'21)</h3></a></li>
 										<li><a href="https://deep-learning-graphs.bitbucket.io/dlg-aaai21/" target = "_blank"><h3>The Fifth International Workshop on Deep Learning on Graphs (DLG-AAAI'21) (co-located with AAAI'21)</h3></a></li>
 										<li><a href="https://deep-learning-graphs.bitbucket.io/dlg-kdd20/" target = "_blank"><h3>The Fourth International Workshop on Deep Learning on Graphs (DLG-KDD'20) (co-located with KDD'20)</h3></a></li>
