--- a/dlg4nlp-naacl22/publications.html
+++ b/dlg4nlp-naacl22/publications.html
@@ -39,14 +39,30 @@
 												<!--<a href="#" class="button">Learn More</a>-->
 					</header>
 				</section>
+
+
 				<section class="wrapper style1">
 					<div class="container">
 						<div id="content">
-							<h2 class="section-heading">TBD</h2>
+							<h2 class="section-heading">Accepted Papers</h2>
 							
+							<article>
+								<ul style="list-style-type:disc;">
+									<li>Wenhao Yu, Chenguang Zhu, Lianhui Qin, Zhihan Zhang, Tong Zhao, Meng Jiang. <em>Diversifying Content Generation for Commonsense Reasoning with Mixture of Knowledge Graph Experts</em>.<a href="https://openreview.net/pdf?id=Ihd7jVXgkCp" target = "_blank">[paper]</a></li>
+									<li>Changmao Li, Jeffrey Flanigan. <em>Improving Neural Machine Translation with the Abstract Meaning Representation by Combining Graph and Sequence Transformers</em>.<a href="https://openreview.net/pdf?id=wn4FiiA_xdF" target = "_blank">[paper]</a></li>
+									<li>Jin Guo, Zhen Han, su zhou, Jiliang Li, Volker Tresp, Yuyi Wang. <em>Continuous Temporal Graph Networks for Event-Based Graph Data</em>.<a href="https://openreview.net/pdf?id=ASBJkCusMC" target = "_blank">[paper]</a></li>
+									<li>Woo Suk Choi, Yu-Jung Heo, Dharani Punithan, Byoung-Tak Zhang. <em>Scene Graph Parsing via Abstract Meaning Representation in Pre-trained Language Models</em>.<a href="https://openreview.net/pdf?id=764nB9UdW16" target = "_blank">[paper]</a></li>
+									<li>Merieme Bouhandi, Emmanuel Morin, Thierry Hamon. <em>Graph Neural Networks for Adapting Off-the-shelf General Domain Language Models to Low-Resource Specialised Domains</em>.<a href="https://openreview.net/pdf?id=pbWzhh8ap30" target = "_blank">[paper]</a></li>
+									<li>Adyasha Maharana, Mohit Bansal. <em>GraDA: Graph Generative Data Augmentation for Commonsense Reasoning</em>.<a href="https://openreview.net/pdf?id=H8wPhtBeAU" target = "_blank">[paper]</a></li>
+									<li>Irene Li, Aosong Feng, Hao Wu, Tianxiao Li, Toyotaro Suzumura, Ruihai Dong. <em>LiGCN: Label-interpretable Graph Convolutional Networks for Multi-label Text Classification</em>.<a href="https://openreview.net/pdf?id=TSVXubGe7Oh" target = "_blank">[paper]</a></li>
+									<li>Zhenyun Deng, Yonghua Zhu, Qianqian Qi, Michael Witbrock, Patricia J. Riddle. <em>Explicit Graph Reasoning Fusing Knowledge and Contextual Information for Multi-hop Question Answering</em>.<a href="https://openreview.net/pdf?id=bKxQH3PwD3I" target = "_blank">[paper]</a></li>
+								</ul>
+							</article>
+
 						</div>
 					</div>
 				</section>
+
 	
 			<!-- Footer -->
 				<div id="footer">
