--- a/dlg4nlp-naacl22/keynote.html
+++ b/dlg4nlp-naacl22/keynote.html
@@ -54,13 +54,14 @@
 					   </div>
 					   <div id="B" style="float: left; width: 75%;">
 						  <div>
-							<a href="http://hanj.cs.illinois.edu" target = "_blank"><b>Jiawei Han</b></a> is Abel Bliss professor in the Department of Computer Science, University of Illinois. He has been researching data mining, information network analysis, and database systems, with more than 600 publications. He served as the founding editor-in-chief of the ACM Transactions on Knowledge Discovery from Data (TKDD). He has received the ACM SIGKDD Innovation Award (2004), IEEE Computer Society Technical Achievement Award (2005), IEEE Computer Society W. Wallace McDowell Award (2009), and Daniel C. Drucker Eminent Faculty Award at UIUC (2011). He is currently the director of the Information Network Academic Research Center (INARC) supported by the Network Science-Collaborative Technology Alliance (NS-CTA) program of the U.S. Army Research Lab. His co-authored textbook Data Mining: Concepts and Techniques (Morgan Kaufmann) has been adopted worldwide. He is a fellow of the IEEE and ACM.
+							<a href="http://hanj.cs.illinois.edu" target = "_blank"><b>Jiawei Han</b></a> is Michael Aiken Chair Professor in the Department of Computer Science, University of Illinois at Urbana-Champaign.  He received ACM SIGKDD Innovation Award (2004), IEEE Computer Society Technical Achievement Award (2005), IEEE Computer Society W. Wallace McDowell Award (2009), and Japan's Funai Achievement Award (2018).  He is Fellow of ACM and Fellow of IEEE and served as the Director of Information Network Academic Research Center (INARC) (2009-2016) supported by the Network Science-Collaborative Technology Alliance (NS-CTA) program of U.S. Army Research Lab and co-Director of KnowEnG, a Center of Excellence in Big Data Computing (2014-2019), funded by NIH Big Data to Knowledge (BD2K) Initiative.  Currently, he is serving on the executive committees of two NSF funded research centers:  MMLI (Molecular Make Research Institute)—one of NSF funded national AI centers since 2020 and I-Guide—The National Science Foundation (NSF) Institute for Geospatial Understanding through an Integrative Discovery Environment (I-GUIDE) since 2021.
+							<hr />
 						  </div>
 						   <div>
-							<b>Title: </b>TBA.
+							<b>Title: </b>Towards Automatic Construction of Knowledge Graphs from Unstructured Text
 						  </div>
 						   <div>
-							<b>Abstract: </b>TBA.
+							<b>Abstract: </b>Graphs and texts are both ubiquitous in today’s information world.  However, it is still an open problem on how to automatically construct knowledge graphs from massive, dynamic, and unstructured massive texts, without human annotation or supervision. In the past years, our group has been studying how to develop effective methods for automatic mining of hidden structures and knowledge from text, and such hidden structures include entities, relations, events, and knowledge graph structures.  Equipped with pretrained language models and machine learning methods, as well as human-provided ontological structures, it is promising to transform unstructured text data into structured knowledge.  In this talk, we will provide an overview on a set of weakly supervised machine learning methods developed recently for such an exploration, including joint spherical text embedding, discriminative topic mining, named entity recognition, relation extraction, event discovery, text classification, and taxonomy-guided text analysis. We show that weakly supervised approach could be promising at transforming massive text data into structured knowledge graphs.
 							<hr />
 						  </div>
 						  	
@@ -74,6 +75,7 @@
                         <div id="B" style="float: left; width: 75%;">
                             <div>
 								<a href="http://blender.cs.illinois.edu/hengji.html" target = "_blank"><b>Heng Ji</b></a> is a professor at the Computer Science Department of University of Illinois at Urbana-Champaign. She has received many awards including "AI’s 10 to Watch" Award by IEEE Intelligent Systems in 2013, NSF CAREER award in 2009, PACLIC2012 Best paper runner-up, "Best of ICDM2013" paper award, and "Best of SDM2013" paper award. She has served as the Program Committee Co-Chair of NAACL-HLT2018, NLP-NABD2018, NLPCC2015, CSCKG2016 and CCL2019, and senior area chair for many conferences. She has given a large number of keynotes/tutorials presentations in Event Extraction, Natural Language Understanding, and Knowledge Base Construction in many conferences including but not limited to ACL, EMNLP, NAACL, NeurIPS, AAAI and KDD. 
+								<hr />
                             </div>
                             <div>
                                 <b>Title: </b>TBA.
@@ -94,13 +96,13 @@
                         <div id="B" style="float: left; width: 75%;">
                             <div>
 								<a href="http://www.meng-jiang.com/index.html" target = "_blank"><b>Meng Jiang</b></a> is currently an assistant professor at the Department of Computer Science and Engineering in the University of Notre Dame. He obtained his B.E. and Ph.D. from Tsinghua University. He spent two years in UIUC as a postdoc and joined ND in 2017. His research interests include data mining, machine learning, and natural language processing. He has published more than 100 peer-reviewed papers of these topics. He is the recipient of Notre Dame International Faculty Research Award. The honors and awards he received include best paper finalist in KDD 2014, best paper award in KDD-DLG workshop 2020, and ACM SIGSOFT Distinguished Paper Award in ICSE 2021. He received NSF CRII award in 2019 and CAREER award in 2022.
-
+								<hr />
                             </div>
                             <div>
-                                <b>Title: </b>TBA.
+                                <b>Title: </b>Enhancing Language Generation with Knowledge Graphs
                             </div>
                             <div>
-                                <b>Abstract: </b>TBA.
+                                <b>Abstract: </b>Natural language generation is to learn p(Y|X) to create desired Y with a given X. It has many real-world applications. However, there are many possibilities that Y is too difficult to generate with just X. Then knowledge graphs can help – with tons of relational information that is uncovered by billions of humans over thousands of years. In this talk, we will provide an overview on the approaches that use knowledge graphs to improve the precision of neural machine translation, the factual correctness of abstractive summarization, the content diversity in commonsense reasoning, the accuracy in question answering, etc. We show that knowledge graph-enhanced language generation methods could be promising at many other types of important applications.
                                 <hr />
                             </div>
                             
