--- a/dlg4nlp-naacl22/keynote.html
+++ b/dlg4nlp-naacl22/keynote.html
@@ -78,10 +78,10 @@
 								<hr />
                             </div>
                             <div>
-                                <b>Title: </b>TBA.
+                                <b>Title: </b>TBD.
                             </div>
                             <div>
-                                <b>Abstract: </b>TBA.
+                                <b>Abstract: </b>TBD.
                                 <hr />
                             </div>
                             
