--- a/dlg4nlp-iclr22/schedule.html
+++ b/dlg4nlp-iclr22/schedule.html
@@ -224,7 +224,7 @@
 	
 									<p>(12:00-12:15pm) Talk 2: Bai Xuefeng, <em>Semantic Representation for Dialogue Modeling</em> <a href="https://aclanthology.org/2021.acl-long.342.pdf" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
-									<p>(12:15-12:30pm) Talk 3: R5: Shengyao Lu, <em>Rule Discovery with Reinforced and Recurrent Relational Reasoning</em> <a href="https://openreview.net/pdf?id=2eXhNpHeW6E" target="_blank">[paper]</a> <div class="myline"></div> </p>
+									<p>(12:15-12:30pm) Talk 3: Shengyao Lu, <em>R5: Rule Discovery with Reinforced and Recurrent Relational Reasoning</em> <a href="https://openreview.net/pdf?id=2eXhNpHeW6E" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
 									<p>(12:30-12:45pm) Talk 4: Yuxian Meng et al., <em>GNN-LM: Language Modeling Based on Global Contexts via GNN</em> <a href="https://openreview.net/pdf?id=BS49l-B5Bql" target="_blank">[paper]</a> <div class="myline"></div> </p>
 
