--- a/dlg4nlp-naacl22/schedule.html
+++ b/dlg4nlp-naacl22/schedule.html
@@ -56,7 +56,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-12 text-center">
-								<h2 class="section-heading">Schedule: July 15, 2022</h2>
+								<!-- <h2 class="section-heading">Schedule: July 15, 2022</h2> -->
 							</div>
 						</div>
 				
