--- a/dlg4nlp-naacl22/schedule.html
+++ b/dlg4nlp-naacl22/schedule.html
@@ -45,7 +45,7 @@
 					<header>
 						<h2><font size="6">Welcome to Deep Learning on Graphs for Natural Language Processing (DLG4NLP@NAACL’22)!</font>
 							<br />Hybrid: Seattle, Washington and Online
-							<br />July 14, 2022
+							<br />July 15, 2022
 						</h2>
 												<!--<a href="#" class="button">Learn More</a>-->
 					</header>
@@ -56,7 +56,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-12 text-center">
-								<!-- <h2 class="section-heading">Schedule: July 15, 2022</h2> -->
+								<h2 class="section-heading">Schedule: July 15, 2022 (Anywhere on Earth)</h2>
 							</div>
 						</div>
 				
