--- a/dlg4nlp-naacl22/keynote.html
+++ b/dlg4nlp-naacl22/keynote.html
@@ -95,14 +95,14 @@
                                 </div>
                         <div id="B" style="float: left; width: 75%;">
                             <div>
-								<a href="https://shanghai.nyu.edu/academics/faculty/directory/zheng-zhang" target = "_blank"><b>Zheng Zhang</b></a> received the Ph.D. degree in electrical and computer engineering from the University of Illinois at Urbana–Champaign, Urbana, IL, USA.,He was a project lead and a Member of Technical Staff with HP-Labs, Palo Alto, CA, USA. He was the Founder of the System Research Group, Microsoft Research Asia, Beijing, China, where he served as a Principle Researcher and a Research Area Manager. He is a Professor of computer science with New York University Shanghai, Shanghai, China, and a Global Network Professor with New York University, New York, NY, USA. As of 2018, he is taking a leave of absence and has joined Amazon AWS, Seattle, WA, USA, taking the role of the Director of AWS Shanghai AI Lab, Shanghai. His research interests are theories and practices of large-scale distributed computing and its intersection with machine learning, in particular deep learning.
+								<a href="https://shanghai.nyu.edu/academics/faculty/directory/zheng-zhang" target = "_blank"><b>Zheng Zhang</b></a> is a Senior Principal Scientist and the founding Director of Amazon Web Service (AWS) Shanghai AI Lab. He was full Global Network Professor of Computer Science in NYU Shanghai, where he also held an affiliated appointment with the Department of Computer Science at the Courant Institute of Mathematical Sciences and with the Center for Data Science at NYU's campus in New York City.  He was a Principal Researcher and Research Area Manger in Microsoft Research Asia. Zheng holds a PhD from the University of Illinois, Urbana-Champaign, an MS from University of Texas, Dallas, and a BS Fudan University. Zheng was founder and advisor for various DL platforms such as MXNet, MinPy and most recently DGL, which brings deep learning practise to graph.
 								<hr />
                             </div>
                             <div>
-                                <b>Title: </b>TBD.
+                                <b>Title: </b>Scaling out GNN Applications for NLP
                             </div>
                             <div>
-                                <b>Abstract: </b>TBD.
+                                <b>Abstract: </b>This talks begins with the motivation that drove me and my colleagues to invest in Graph Neural Networks: AWS Shanghai AI Lab owns the development of the open-source project Deep Graph Library (DGL), and we have a rich but focused research profile around GNNs, fanning into fundamental as well as important core AI application areas such as natural language processing and computer vision tasks. Then I will dive deeper into topics relevant to this workshop. I will share our early investigation that reveals Transformer is special form of GNNs, our modest attempt to bridge the gap between texts and graphs at sentence level, and our most recent effort in project GRED (Graph of Relation, Events and Discourse) which aims to extract and exploit various structures that are embedded in long document collections, and do so in a unified way. I will conclude with some key challenges and call for community's attention and effort.
                                 <hr />
                             </div>
                             
