--- a/dlg4nlp-naacl22/index.html
+++ b/dlg4nlp-naacl22/index.html
@@ -53,7 +53,7 @@
 
 									<p>This workshop aims to bring together both academic researchers and industrial practitioners from different backgrounds and perspectives to the above challenges. This workshop intends to share visions of investigating new approaches and methods at the intersection of graph machine learning and NLP. The workshop will consist of contributed talks, contributed posters, invited talks, and panelists on a wide variety of novel GNN methods and NLP applications.</p>
 
-									<h2 id="dates">Important Dates (Time: Anywhere on Earth)</h2>
+									<h2 id="dates">Important Dates (Time: Pacific Daylight Time)</h2>
 <!--									<center>-->
 									<table style="width: 90%">
 										<tbody>
