--- a/dlg4nlp-naacl22/schedule.html
+++ b/dlg4nlp-naacl22/schedule.html
@@ -163,7 +163,7 @@
 							<tr>
 								<td>11:00-11:45am</td>
 								<td>
-									<em>Panel Discussion</em> 
+									<em>Panel Topic: Unifying GNNs and Pretraining</em> 
 									</br>
 									</br>
 									Panelists: Jian-Yun Nie (University of Montreal), Lili Mou (University of Alberta), Chenguang Zhu (Microsoft), Yu Su (Ohio State University), Xiaojie Guo (JD.COM Silicon Valley Research Center)
