--- a/dlg4nlp-naacl22/schedule.html
+++ b/dlg4nlp-naacl22/schedule.html
@@ -137,7 +137,7 @@
 							<tr>
 								<td>10:00-10:45am</td>
 								<td>
-									<em>Keynote talk 2: Towards Automatic Construction of Knowledge Graphs from Unstructured Text</em>
+									<em>Keynote talk 2: Towards Automatic Construction of Knowledge Graphs from Unstructured Text</em> <a href="slides/Jiawei Han-Knowledge-Graph-DLG4NLP-NAACL22.pdf" target="_blank">[slides]</a>
 									</br>
 									</br>
 									<p>
@@ -261,7 +261,7 @@
 							<tr>
 								<td>14:00-14:45pm</td>
 								<td>
-									<em>Keynote talk 3: Enhancing Language Generation with Knowledge Graphs</em>
+									<em>Keynote talk 3: Enhancing Language Generation with Knowledge Graphs</em> 
 									</br>
 									</br>
 									<p>
@@ -283,7 +283,7 @@
 							<tr>
 								<td>14:45-15:30pm</td>
 								<td>
-									<em>Keynote talk 4: Will Graphs Lead to the Next Breakthrough of Conversational AI?</em> 
+									<em>Keynote talk 4: Will Graphs Lead to the Next Breakthrough of Conversational AI?</em> <a href="slides/Graphs_and_Conversational_AI-DLG4NLP-NAACL22.pdf" target="_blank">[slides]</a>
 									</br>
 									</br>
 									<p>
@@ -316,7 +316,7 @@
 										<tr style="border:0;text-align:center;vertical-align:middle">
 											<p>
 												(15:45-16:00pm) </br>
-												P1: Bootstrapping a User-Centered Task-Oriented Dialogue System </br>
+												P1: Bootstrapping a User-Centered Task-Oriented Dialogue System <a href="slides/HuanSun-TaskBot-DLG4NLP-NAACL22.pdf" target="_blank">[slides]</a> </br>
 												Abstract: In this talk, we will discuss OSU TacoBot, a task-oriented dialogue system that won third place in the inaugural Alexa Prize TaskBot Challenge. TacoBot assists users in completing multi-step cooking and home improvement tasks. Designed with a user-centered principle and aspiring to deliver a collaborative and accessible dialogue experience, TacoBot is equipped with accurate language understanding, flexible dialogue management, and engaging response generation, and is backed by a strong search engine and an automated end-to-end test suite. We will discuss various roles graphs can play in the system and the promise of knowledge graph reasoning as future work.
 												</br>
 												</br>
