--- a/dlg4nlp-naacl22/schedule.html
+++ b/dlg4nlp-naacl22/schedule.html
@@ -261,7 +261,7 @@
 							<tr>
 								<td>14:00-14:45pm</td>
 								<td>
-									<em>Keynote talk 3: Enhancing Language Generation with Knowledge Graphs</em> 
+									<em>Keynote talk 3: Enhancing Language Generation with Knowledge Graphs</em> <a href="slides/MengJiang_ELG_KG_DLG4NLP_NAACL22.pdf" target="_blank">[slides]</a>
 									</br>
 									</br>
 									<p>
@@ -328,7 +328,7 @@
 										<tr style="border:0;text-align:center;vertical-align:middle">
 											<p>
 												(16:00-16:15pm) </br>
-												P2: Graph4NLP: A Library for Deep Learning on Graphs for NLP </br>
+												P2: Graph4NLP: A Library for Deep Learning on Graphs for NLP <a href="slides/XiaojieGuo_Graph4NLP_DLG4NLP_NAACL22.pdf" target="_blank">[slides]</a> </br>
 												Abstract: This talk will introduce a powerful and flexible deep graph learning library for natural language processing, namely, Graph4NlP. Graph4NLP is an easy-to-use library for R&D at the intersection of Deep Learning on Graphs and Natural Language Processing. It provides both full implementations of state-of-the-art models for data scientists and also flexible interfaces to build customized models for researchers and developers with whole-pipeline support. Built upon highly-optimized runtime libraries including DGL, Graph4NLP has both high running efficiency and great extensibility. The library covers a wide range of graph construction functions, including several dynamic graph construction and static graph construction methods.  It also covers a wide range of NLP applications based on GNN modules, including text classification, semantic parsing, neural machine translation, summarization, KG completion, math word problem solving, name entity recognition, and question generation.
 												</br>
 												</br>
