--- a/dlg4nlp-naacl22/keynote.html
+++ b/dlg4nlp-naacl22/keynote.html
@@ -58,7 +58,7 @@
 							<hr />
 						  </div>
 						   <div>
-							<b>Title: </b>Towards Automatic Construction of Knowledge Graphs from Unstructured Text
+							<b>Title: </b>Towards Automatic Construction of Knowledge Graphs from Unstructured Text <a href="slides/Jiawei Han-Knowledge-Graph-DLG4NLP-NAACL22.pdf" target="_blank">[slides]</a>
 						  </div>
 						   <div>
 							<b>Abstract: </b>Graphs and texts are both ubiquitous in today’s information world.  However, it is still an open problem on how to automatically construct knowledge graphs from massive, dynamic, and unstructured massive texts, without human annotation or supervision. In the past years, our group has been studying how to develop effective methods for automatic mining of hidden structures and knowledge from text, and such hidden structures include entities, relations, events, and knowledge graph structures.  Equipped with pretrained language models and machine learning methods, as well as human-provided ontological structures, it is promising to transform unstructured text data into structured knowledge.  In this talk, we will provide an overview on a set of weakly supervised machine learning methods developed recently for such an exploration, including joint spherical text embedding, discriminative topic mining, named entity recognition, relation extraction, event discovery, text classification, and taxonomy-guided text analysis. We show that weakly supervised approach could be promising at transforming massive text data into structured knowledge graphs.
@@ -79,7 +79,7 @@
 								<hr />
                             </div>
                             <div>
-                                <b>Title: </b>Enhancing Language Generation with Knowledge Graphs
+                                <b>Title: </b>Enhancing Language Generation with Knowledge Graphs <a href="slides/MengJiang_ELG_KG_DLG4NLP_NAACL22.pdf" target="_blank">[slides]</a>
                             </div>
                             <div>
                                 <b>Abstract: </b>Natural language generation is to learn p(Y|X) to create desired Y with a given X. It has many real-world applications. However, there are many possibilities that Y is too difficult to generate with just X. Then knowledge graphs can help – with tons of relational information that is uncovered by billions of humans over thousands of years. In this talk, we will provide an overview on the approaches that use knowledge graphs to improve the precision of neural machine translation, the factual correctness of abstractive summarization, the content diversity in commonsense reasoning, the accuracy in question answering, etc. We show that knowledge graph-enhanced language generation methods could be promising at many other types of important applications.
@@ -121,7 +121,7 @@
 								<hr />
                             </div>
                             <div>
-                                <b>Title: </b>Will Graphs Lead to the Next Breakthrough of Conversational AI?
+                                <b>Title: </b>Will Graphs Lead to the Next Breakthrough of Conversational AI? <a href="slides/Graphs_and_Conversational_AI-DLG4NLP-NAACL22.pdf" target="_blank">[slides]</a>
                             </div>
                             <div>
                                 <b>Abstract: </b>Teaching machines to understand natural languages and converse with humans require expressive and flexible meaning representations, which makes graphs an appealing tool for conversational AI. However, only recently have we started to see explorations of the interplay between graphs and conversational AI. In this talk, I will discuss two recent lines of work in this space. I will first discuss a new formalism for task-oriented dialogues based on dataflow graphs, and how that makes it possible to represent fine-grained semantics in task-oriented dialogues and support rich multi-turn interactions. Towards more universal conversational interfaces that support a broad range of domains, I will then discuss recent efforts in developing question answering systems on large-scale knowledge graphs with millions of entities and billions of facts, and how the broad coverage of knowledge graphs reveals new challenges such as non-i.i.d. generalization and large search spaces, and our attempts to tackle those challenges. The talk will be concluded with discussion on promising future directions.  
